[package]
name = "blob_retriever"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
beacon-api-client = { git = "https://github.com/ralexstokes/beacon-api-client", rev = "7f28993615fde52d563dd601a0511c34fe9b7c38" } 
blst = "0.3.6"
ethereum-consensus = { git = "https://github.com/ralexstokes/ethereum-consensus", rev = "12508c1f9b0c8f4bf4c5e9b6d441e840c1b37fd9" }
tokio = { version = "1.28.2", features = ["full"] }
# tokio-stream = { version = "0.1.8", optional = true }
tokio-stream = "0.1"
uint = "0.9.5"
url = "2.2.2"